# yazaki_floorplan2wire

./: .gitignore  CMakeLists.txt  README.md  dockerfile  dockerfile.run  requirements.txt
cmake/: CMakeLists.txt.swig  python.cmake  swig.cmake
data/realworld/: 0-ElecInfo.json  0-electricitysetting.json  1-ElecInfo.json  1-electricitysetting.json  2-ElecInfo.json  2-electricitysetting.json  3-ElecInfo.json  3-electricitysetting.json  4-ElecInfo.json  4-electricitysetting.json  5-ElecInfo.json  5-electricitysetting.json  6-ElecInfo.json  6-electricitysetting.json  7-ElecInfo.json  7-electricitysetting.json  8-ElecInfo.json  8-electricitysetting.json
data/synthetic/2-10-1/: devices.txt  edges.txt  vertices.txt
data/synthetic/2-10-3/: edges.txt  vertices.txt
data/synthetic/2-20-1/: edges.txt  vertices.txt
data/synthetic/2-20-3/: devices.txt  edges.txt  vertices.txt
data/synthetic/2-40-1/: devices.txt  edges.txt  vertices.txt
data/synthetic/2-40-3/: devices.txt  edges.txt  vertices.txt
python/: cadquery_visual.py  cplex_solve.py  excel_export.py  gurobi_solve.py  methods.py  plotly_visual.py  realworld.py  swig_access.py  synthetic.py  test.py  visualization.py
src/: CMakeLists.txt  barrier.cc  barrier.h  decomposition_approach.cc  decomposition_approach.h  graph_constructor.cc  graph_constructor.h
src/algorithms/: CMakeLists.txt  argheap.h  interval.h  mbsp.cc  mbsp.h  mst.cc  mst.h
src/base/: algorithm_error.h  cuboid.cc  cuboid.h  graph.cc  graph.h  plane.cc  plane.h  point.cc  point.h  types.h
src/python/: CMakeLists.txt  ewd.i
(+37 files in other folders)
